--- a/options.html
+++ b/options.html
@@ -161,6 +161,15 @@
     </div>
 
     <div class="setting-group">
+      <label>🔐 Twitter Authentication (Purrview Backend)</label>
+      <div class="help-text">Sign in with Twitter to sync your data with Purrview backend</div>
+      <button id="twitterLoginBtn" style="margin-top: 10px; background: #1DA1F2;">
+        <span id="twitterLoginText">Sign in with Twitter</span>
+      </button>
+      <div id="twitterAuthStatus" style="margin-top: 10px; padding: 10px; border-radius: 4px; display: none;"></div>
+    </div>
+
+    <div class="setting-group">
       <label>
         <input type="checkbox" id="useAI">
         Enable AI Analysis
@@ -210,6 +219,7 @@
     <div class="status" id="status"></div>
   </div>
 
+  <script src="auth.js"></script>
   <script src="options.js"></script>
 </body>
 </html>
